# spreadsheet-mcp

./: Dockerfile  README.ja.md  README.md  hello.py  pyproject.toml  server.py  sheet.py  smithery.yaml
src/spreadsheet_mcp/: credentials.json  sheet.py
