[project]
name = "spreadsheet-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gspread>=6.2.0",
    "mcp[cli]>=1.6.0",
    "polars>=1.26.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.398",
    "ruff>=0.11.4",
]
